SVN Update# 1302 by Vity: URI support only